Added new crafting method. Streamlined Totem Head Blocks.

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -9,10 +9,11 @@ displayURL="https://github.com/Polarice3/Goety" #optional
 logoFile="examplemod.png" #optional
 credits="Special thanks to Technovision, Cy4's Modding and TelepathicGrunt for their tutorials and diesieben07 for helping me with a problem!
 
-        Credit to Alex666 for event, spawner, gale animation and config codes, hollingsworth for Vex codes,
+        Credit to Alex666 for event, spawner, gale animation, config and advancements codes, hollingsworth for Vex codes,
         baileyholl for HUD codes, Lothrazar for Teleporting codes,
         DenisMasterHerobrine and Ellpeck for Curios codes,
-        owmii for Cobweb movement codes, elucent for Mixin codes,
+        owmii for Cobweb movement codes, elucent for Mixin and Item Tile Entities codes,
+        WayofTime for some JEI plugin codes,
         vemerion and MrCrayfish for wand and staff inventory codes and Ipsis for certain codes!"
 authors="anogon/Polarice3" #optional
 description='''
