Structures now use Data Structure Blocks.

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -14,6 +14,7 @@ credits="Special thanks to Technovision, Cy4's Modding and TelepathicGrunt for t
         DenisMasterHerobrine and Ellpeck for Curios codes,
         owmii for Cobweb movement codes, elucent for Mixin and Item Tile Entities codes,
         WayofTime for some JEI plugin codes, stal111 for Infamy codes, The Grey Ghost for Command codes,
+        HellFirePvP for Structure codes,
         vemerion and MrCrayfish for wand and staff inventory codes and Ipsis for certain codes!"
 authors="anogon/Polarice3" #optional
 description='''
