Implemented Dark Altar. Moved ModTileEntityType to init folder.

--- a/src/main/resources/data/goety/loot_tables/chests/salvaged_fort_treasure.json
+++ b/src/main/resources/data/goety/loot_tables/chests/salvaged_fort_treasure.json
@@ -6,17 +6,7 @@
       "entries": [
         {
           "type": "minecraft:item",
-          "name": "minecraft:book",
-          "functions": [
-            {
-              "function": "minecraft:enchant_randomly",
-              "enchantments": [
-                "minecraft:fortune",
-                "minecraft:silk_touch",
-                "minecraft:looting"
-              ]
-            }
-          ]
+          "name": "goety:treasure_pouch"
         }
       ]
     },
