--- a/src/main/resources/assets/goety/models/item/treasure_pouch.json
+++ b/src/main/resources/assets/goety/models/item/treasure_pouch.json
@@ -1,6 +1,6 @@
 {
   "parent": "item/generated",
   "textures": {
-    "layer0": "goety:items/leaveform"
+    "layer0": "goety:items/treasure_pouch"
   }
 }
