--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -14,7 +14,7 @@ credits="Special thanks to Technovision, Cy4's Modding and TelepathicGrunt for t
         Credit to Alex666 for event, spawner, gale animation, config and advancements codes, hollingsworth for Vex codes,
         baileyholl for HUD codes, Lothrazar for Teleporting codes,
         DenisMasterHerobrine and Ellpeck for Curios codes,
-        owmii for Cobweb movement codes, elucent for Mixin and Item Tile Entities codes,
+        owmii for Cobweb movement codes, elucent for Mixin, Sound and Item Tile Entities codes,
         WayofTime for some JEI plugin codes, stal111 for Infamy codes, The Grey Ghost for Command codes,
         HellFirePvP for Structure codes, klikli-dev for ritual, and recipe codes,
         vemerion and MrCrayfish for wand and staff inventory codes and Ipsis for certain codes!"
