Changed some textures, preparing for Summoning Rituals.

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -12,7 +12,7 @@ credits="Special thanks to Technovision, Cy4's Modding and TelepathicGrunt for t
         Credit to Vazkii, williewillus & Hubry for Patchouli, TheIllusiveC4 & CFGrafanaStats for Curios.
 
         Credit to Alex666 for event, spawner, gale animation, config and advancements codes, hollingsworth for Vex codes,
-        baileyholl for HUD codes, Lothrazar for Teleporting codes,
+        baileyholl for HUD and biome codes, Lothrazar for Teleporting codes,
         DenisMasterHerobrine and Ellpeck for Curios codes,
         owmii for Cobweb movement codes, elucent for Mixin, Sound and Item Tile Entities codes,
         WayofTime for some JEI plugin codes, stal111 for Infamy codes, The Grey Ghost for Command codes,
