--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -3,3 +3,7 @@ public-f net.minecraft.world.gen.settings.DimensionStructuresSettings field_2361
 public-f net.minecraft.world.gen.FlatGenerationSettings field_202247_j #STRUCTURES
 public-f net.minecraft.world.gen.settings.DimensionStructuresSettings field_236193_d_ #structures
 public net.minecraft.world.gen.DimensionSettings field_242740_q # field_242740_q
+public net.minecraft.world.biome.BiomeContainer field_227054_f_ # biomes
+public net.minecraft.world.biome.BiomeContainer field_227052_d_ # WIDTH_BITS
+public net.minecraft.world.biome.Biome field_235052_p_ # effects
+public net.minecraft.world.biome.Biome field_242423_j # climate
