--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'org.parchmentmc.librarian.forgegradle'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
+apply plugin: 'org.spongepowered.mixin'
 
 version = "${mod_version}"
 group = 'com.Polarice3.Goety' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
@@ -114,6 +115,7 @@ dependencies {
     runtimeOnly fg.deobf("mezz.jei:jei-${mc_version}:${jei_version}")
     compileOnly fg.deobf("vazkii.patchouli:Patchouli:1.16.4-53.2:api")
     runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:1.16.4-53.2")
+    annotationProcessor 'org.spongepowered:mixin:0.8.1:processor'
 
 }
 
@@ -121,6 +123,7 @@ dependencies {
 jar {
     manifest {
         attributes([
+                "MixinConfigs": "goety.mixins.json",
             "Specification-Title": "goety",
             "Specification-Vendor": "examplemodsareus",
             "Specification-Version": "1",
@@ -130,6 +133,10 @@ jar {
             "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
         ])
     }
+}
+
+mixin {
+    add sourceSets.main, "goety.refmap.json"
 }
 
 jar.finalizedBy('reobfJar')
