Liches are more Lichier. Some extra files are there due to Experimentation.

--- a/src/main/resources/data/goety/patchouli_books/black_book/en_us/entries/focuses/feasting_focus.json
+++ b/src/main/resources/data/goety/patchouli_books/black_book/en_us/entries/focuses/feasting_focus.json
@@ -5,7 +5,7 @@
   "pages": [
     {
       "type": "patchouli:text",
-      "text": "Those Hungry Totems have given you an idea. By using the power of the Ender Pearls, you are able to call upon Fangs at the bottom of any creature around you. More accurate than the average Biting Focus, though only if said creature doesn't move."
+      "text": "Those Hungry Totems have given you an idea. By gathering and using those pesky Totem Heads and with the power of Ender Pearls, you are able to call upon Fangs at the bottom of any creature around you. More accurate than the average Biting Focus, though only if said creature doesn't move."
     },
     {
       "type": "patchouli:crafting",
