--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -17,6 +17,7 @@ credits="Special thanks to Technovision, Cy4's Modding and TelepathicGrunt for t
         owmii for Cobweb movement codes, elucent for Mixin, Sound and Item Tile Entities codes,
         WayofTime for some JEI plugin codes, stal111 for Infamy codes, The Grey Ghost for Command codes,
         HellFirePvP for Structure codes, klikli-dev for ritual, and recipe codes,
+        Qelifern for Soul Transfer Gem codes,
         vemerion and MrCrayfish for wand and staff inventory codes and Ipsis for certain codes!"
 authors="anogon/Polarice3" #optional
 description='''
