--- a/src/main/resources/data/goety/patchouli_books/black_book/en_us/entries/focuses/feasting_focus.json
+++ b/src/main/resources/data/goety/patchouli_books/black_book/en_us/entries/focuses/feasting_focus.json
@@ -8,7 +8,7 @@
       "text": "Those Hungry Totems have given you an idea. By gathering and using those pesky Totem Heads and with the power of Ender Pearls, you are able to call upon Fangs at the bottom of any creature around you. More accurate than the average Biting Focus, though only if said creature doesn't move."
     },
     {
-      "type": "patchouli:crafting",
+      "type": "goety:ritual",
       "recipe": "goety:feastfocus"
     }
   ]
