--- a/src/main/resources/data/goety/patchouli_books/black_book/en_us/entries/focuses/feasting_focus.json
+++ b/src/main/resources/data/goety/patchouli_books/black_book/en_us/entries/focuses/feasting_focus.json
@@ -2,6 +2,7 @@
   "name": "Feasting Focus",
   "icon": "goety:feastfocus",
   "category": "goety:focuses",
+  "advancement": "goety:goety/get_fang_totem",
   "pages": [
     {
       "type": "patchouli:text",
