--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -7,19 +7,10 @@ version="${file.jarVersion}" #mandatory
 displayName="Goety" #mandatory
 displayURL="https://github.com/Polarice3/Goety" #optional
 logoFile="examplemod.png" #optional
-credits="Special thanks to Technovision, Cy4's Modding and TelepathicGrunt for their tutorials and diesieben07 for helping me with a problem!
-
-        Credit to Vazkii, williewillus & Hubry for Patchouli, TheIllusiveC4 & CFGrafanaStats for Curios.
-
-        Credit to Alex666 for event, spawner, gale animation, config and advancements codes, hollingsworth for Vex codes,
-        baileyholl for HUD and biome codes, Lothrazar for Teleporting codes,
-        DenisMasterHerobrine and Ellpeck for Curios codes,
-        owmii for Cobweb movement codes, elucent for Mixin, Sound and Item Tile Entities codes,
-        WayofTime for some JEI plugin codes, stal111 for Infamy codes, The Grey Ghost for Command codes,
-        HellFirePvP for Structure codes, klikli-dev for ritual, and recipe codes,
-        Qelifern for Soul Transfer Gem codes,
-        vemerion and MrCrayfish for wand and staff inventory codes and Ipsis for certain codes!"
-authors="anogon/Polarice3" #optional
+credits="Tutorial/Help: Technovision, Cy4's Modding, TelepathicGrunt, diesieben07.
+        Github Codes: Vazkii, williewillus, Hubry, TheIllusiveC4, CFGrafanaStats, Alex666, hollingsworth, baileyholl, Lothrazar, DenisMasterHerobrine, Ellpeck,
+        owmii, elucent, WayofTime, stal111, The Grey Ghost, HellFirePvP, klikli-dev, Qelifern, vemerion, MrCrayfish, Ipsis, TeamTwilight"
+authors="Polarice3" #optional
 description='''
 Goety adds a bunch of new Mobs that can help or hinder players and a magic system that can provides a player a different way of combat!
 '''
