--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -9,7 +9,7 @@ displayURL="https://github.com/Polarice3/Goety" #optional
 logoFile="examplemod.png" #optional
 credits="Tutorial/Help: Technovision, Cy4's Modding, TelepathicGrunt, diesieben07.
         Github Codes: Vazkii, williewillus, Hubry, TheIllusiveC4, CFGrafanaStats, Alex666, hollingsworth, baileyholl, Lothrazar, DenisMasterHerobrine, Ellpeck,
-        owmii, elucent, WayofTime, stal111, The Grey Ghost, HellFirePvP, klikli-dev, Qelifern, vemerion, MrCrayfish, Ipsis, TeamTwilight"
+        owmii, elucent, WayofTime, stal111, The Grey Ghost, HellFirePvP, klikli-dev, Qelifern, vemerion, MrCrayfish, Ipsis, TeamTwilight, Yunus1903"
 authors="Polarice3" #optional
 description='''
 Goety adds a bunch of new Mobs that can help or hinder players and a magic system that can provides a player a different way of combat!
