--- a/src/main/resources/assets/goety/models/item/launchfocus.json
+++ b/src/main/resources/assets/goety/models/item/launchfocus.json
@@ -1,6 +1,6 @@
 {
   "parent": "item/generated",
   "textures": {
-    "layer0": "goety:items/riftshard"
+    "layer0": "goety:spellicons/launch_spell"
   }
 }
