--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
 version = "${mod_version}"
-group = 'com.Polarice3.Goety' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+group = 'com.Polarice3.Goety'
 archivesBaseName = 'Goety'
 
 repositories {
@@ -51,12 +51,13 @@ minecraft {
         client {
             workingDirectory project.file('run')
 
-            property 'forge.logging.markers', 'REGISTRIES'
+            property "forge.logging.markers", "SCAN,REGISTRIES,REGISTRYDUMP"
 
-            property 'forge.logging.console.level', 'debug'
+            property "forge.logging.console.level", "debug"
 
-            property 'mixin.env.remapRefMap', 'true'
-            property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
+            property "mixin.env.remapRefMap", "true"
+
+            property "mixin.env.refMapRemappingFile", "${projectDir}/build/createSrgToMcp/output.srg"
 
             mods {
                 goety {
@@ -68,11 +69,11 @@ minecraft {
         server {
             workingDirectory project.file('run')
 
-            property 'forge.logging.markers', 'REGISTRIES'
+            property "forge.logging.markers", "SCAN,REGISTRIES,REGISTRYDUMP"
 
             property 'forge.logging.console.level', 'debug'
 
-            property 'mixin.env.disableRefMap', 'true'
+            property "mixin.env.remapRefMap", "true"
 
             mods {
                 goety {
@@ -116,7 +117,6 @@ dependencies {
 
 }
 
-// Example for how to get properties into the manifest for reading by the runtime..
 jar {
     manifest {
         attributes([
@@ -126,7 +126,7 @@ jar {
             "Implementation-Title": project.name,
             "Implementation-Version": "${version}",
             "Implementation-Vendor" :"goety",
-            "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
+            "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
         ])
     }
 }
