Added some configs and trying to implement some stuff.

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -10,3 +10,5 @@ public net.minecraft.world.biome.Biome field_242423_j # climate
 public-f net.minecraft.world.Explosion *
 public-f net.minecraft.item.AxeItem field_203176_a #strippables
 public-f net.minecraft.entity.LivingEntity field_110155_d
+public-f net.minecraft.entity.MobEntity field_82174_bp
+public-f net.minecraft.entity.MobEntity field_184655_bs
